[package]
name = "iron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
bincode = "1.3.3"
bytes = "1.3.0"
futures = "0.3.25"
anyhow = "1.0.68"
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1" }
atoi = "2.0.0"
async-trait = "0.1.64"